# Flyweight

./: .gitignore  LICENSE  README.md
C++/Gridshot/: CMakeLists.txt  CMakePresets.json  Doxyfile  Gridshot.cpp  Gridshot.h  Makefile  WINGridshot.h  cmake_install.cmake  compile_commands.json
C++/Gridshot/docs/docbook/: _a_star_8cpp.xml  _a_star_8cpp__incl.md5  _a_star_8h.xml  _a_star_8h__dep__incl.md5  _a_star_8h__incl.md5  _a_star_8h_source.xml  _cave_generator_8cpp.xml  _cave_generator_8cpp__incl.md5  _cave_generator_8h.xml  _cave_generator_8h__dep__incl.md5  _cave_generator_8h__incl.md5  _cave_generator_8h_source.xml  _colors_8h.xml  _colors_8h__dep__incl.md5  _colors_8h_source.xml  _damage_8cpp.xml  _damage_8cpp__incl.md5  _damage_8h.xml  _damage_8h__dep__incl.md5  _damage_8h_source.xml  _enemy_8cpp.xml  _enemy_8cpp__incl.md5  _enemy_8h.xml  _enemy_8h__dep__incl.md5  _enemy_8h__incl.md5  _enemy_8h_source.xml  _field_object_8cpp.xml  _field_object_8cpp__incl.md5  _field_object_8h.xml  _field_object_8h__dep__incl.md5  _field_object_8h__incl.md5  _field_object_8h_source.xml  _food_8cpp.xml  _food_8cpp__incl.md5  _food_8h.xml  _food_8h__dep__incl.md5  _food_8h__incl.md5  _food_8h_source.xml  _game_field_8cpp.xml  _game_field_8cpp__incl.md5  (+186 more)
C++/Gridshot/docs/html/: _a_star_8cpp.html  _a_star_8cpp__incl.map  _a_star_8cpp__incl.md5  _a_star_8h.html  _a_star_8h.js  _a_star_8h__dep__incl.map  _a_star_8h__dep__incl.md5  _a_star_8h__incl.map  _a_star_8h__incl.md5  _a_star_8h_source.html  _cave_generator_8cpp.html  _cave_generator_8cpp__incl.map  _cave_generator_8cpp__incl.md5  _cave_generator_8h.html  _cave_generator_8h.js  _cave_generator_8h__dep__incl.map  _cave_generator_8h__dep__incl.md5  _cave_generator_8h__incl.map  _cave_generator_8h__incl.md5  _cave_generator_8h_source.html  _colors_8h.html  _colors_8h.js  _colors_8h__dep__incl.map  _colors_8h__dep__incl.md5  _colors_8h_source.html  _damage_8cpp.html  _damage_8cpp__incl.map  _damage_8cpp__incl.md5  _damage_8h.html  _damage_8h.js  _damage_8h__dep__incl.map  _damage_8h__dep__incl.md5  _damage_8h_source.html  _enemy_8cpp.html  _enemy_8cpp__incl.map  _enemy_8cpp__incl.md5  _enemy_8h.html  _enemy_8h__dep__incl.map  _enemy_8h__dep__incl.md5  _enemy_8h__incl.map  (+425 more)
C++/Gridshot/docs/latex/: _a_star_8cpp.tex  _a_star_8cpp__incl.md5  _a_star_8h.tex  _a_star_8h__dep__incl.md5  _a_star_8h__incl.md5  _a_star_8h_source.tex  _cave_generator_8cpp.tex  _cave_generator_8cpp__incl.md5  _cave_generator_8h.tex  _cave_generator_8h__dep__incl.md5  _cave_generator_8h__incl.md5  _cave_generator_8h_source.tex  _colors_8h.tex  _colors_8h__dep__incl.md5  _colors_8h_source.tex  _damage_8cpp.tex  _damage_8cpp__incl.md5  _damage_8h.tex  _damage_8h__dep__incl.md5  _damage_8h_source.tex  _enemy_8cpp.tex  _enemy_8cpp__incl.md5  _enemy_8h.tex  _enemy_8h__dep__incl.md5  _enemy_8h__incl.md5  _enemy_8h_source.tex  _field_object_8cpp.tex  _field_object_8cpp__incl.md5  _field_object_8h.tex  _field_object_8h__dep__incl.md5  _field_object_8h__incl.md5  _field_object_8h_source.tex  _food_8cpp.tex  _food_8cpp__incl.md5  _food_8h.tex  _food_8h__dep__incl.md5  _food_8h__incl.md5  _food_8h_source.tex  _game_field_8cpp.tex  _game_field_8cpp__incl.md5  (+186 more)
C++/Gridshot/docs/rtf/: _a_star_8cpp__incl.md5  _a_star_8h__dep__incl.md5  _a_star_8h__incl.md5  _cave_generator_8cpp__incl.md5  _cave_generator_8h__dep__incl.md5  _cave_generator_8h__incl.md5  _colors_8h__dep__incl.md5  _damage_8cpp__incl.md5  (+128 more)
C++/Gridshot/include/: AStar.h  CaveGenerator.h  Damage.h  DisplayStrings.h  FieldObject.h  Food.h  GameField.h  Item.h  Level.h  Node.h  Projectile.h  Room.h  Score.h  Soldier.h  Treasure.h  UNIXGridshot.h
C++/Gridshot/src/: AStar.cpp  AStar.h  CaveGenerator.cpp  CaveGenerator.h  Colors.h  Damage.cpp  DisplayStrings.cpp  DisplayStrings.h  Enemy.cpp  Enemy.h  FieldObject.cpp  FieldObject.h  Food.cpp  Food.h  GameField.cpp  GameField.h  Item.cpp  Item.h  Level.cpp  Level.h  Life.cpp  Life.h  Node.cpp  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Room.cpp  Room.h  Score.cpp  Soldier.cpp  Soldier.h  Treasure.cpp  Treasure.h  Vector2Int.cpp  Vector2Int.h
(+261 files in other folders)
